# libvideoencoder

./: CMakeLists.txt  README.md  fips.yml
include/libvideoencoder/: OutputStream.h  OutputTrack.h  VideoEncoder.h  VideoWriter.h  ffmpegInclude.h  utils.h
lib/: OutputStream.cpp  OutputTrack.cpp  VideoEncoder.cpp  VideoWriter.cpp  utils.h
test/unit/: test_make_sample_video.cpp  test_make_sample_video_threaded.cpp
tools/: CMakeLists.txt  main.cpp  test_encoder.cpp
